--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -6,6 +6,8 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="16dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     android:paddingRight="16dp">
 
     <TextView
@@ -37,6 +39,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill_green"
             android:paddingLeft="3dp"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
             android:paddingRight="3dp"
             tools:text="100%" />
     </LinearLayout>
