--- a/app/src/main/res/xml/widget_info_stock.xml
+++ b/app/src/main/res/xml/widget_info_stock.xml
@@ -3,4 +3,5 @@
     android:initialLayout="@layout/stock_widget"
     android:minHeight="40dp"
     android:minWidth="80dp"
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"></appwidget-provider>
