--- a/app/src/main/res/layout/stock_widget.xml
+++ b/app/src/main/res/layout/stock_widget.xml
@@ -17,6 +17,7 @@
         android:background="@color/material_blue_500">
 
         <TextView
+            android:id="@+id/tv_widget_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/widget_title"
