--- a/app/src/main/res/xml/widget_info_stock.xml
+++ b/app/src/main/res/xml/widget_info_stock.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/stock_widget"
-    android:minHeight="40dp"
+    android:minHeight="120dp"
     android:minWidth="80dp"
     android:resizeMode="horizontal|vertical"
+    android:previewImage="@mipmap/widget_preview"
     android:updatePeriodMillis="0"></appwidget-provider>
